
CURRENT
-------
- #40114 - Update manual mentioning the need to increase the JVM's heap space for Admin Tool
- #40062 - Include a class similar to the file system wrapper to list files in a bucket

20181024
--------
- #40060 - File name pattern explanation is misleading
- #40232 - ClassNotFoundException accesing Amazon S3 using IAM Assumed Roles

20181008
-------
- #39744 - Rebranding of the HDFS wrapper
- #39931 - Failed connections could require restarting VDP to refresh wrapper configuration files

20181003
--------
- Created first version of this component for Denodo 7.0