@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hadoop-commons-7.0</artifactId>
-    <version>20181024</version>
+    <version>20181119</version>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 
