@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hdfs-customwrapper-7.0</artifactId>
-    <version>20181024</version>
+    <version>20181119</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-customwrapper</name>
 
@@ -18,6 +18,7 @@
         <commons-codec.version>1.10</commons-codec.version>
         <commons-io.version>2.6</commons-io.version>
         <commons-lang.version>2.6</commons-lang.version>
+        <gcs.version>hadoop3-1.9.10</gcs.version>
         <hadoop.version>3.1.1</hadoop.version> <!-- Requires java 8 -->
         <hadoop.lzo.version>0.4.20</hadoop.lzo.version>   
         <httpclient.version>4.5.2</httpclient.version>  <!-- min required by aws-sdk  -->
@@ -323,6 +324,10 @@
                     <groupId>com.jcraft</groupId>
                     <artifactId>jsch</artifactId>
                 </exclusion> 
+                <exclusion>  <!-- Use the more modern guava version included by gcs-connector -->
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
             </exclusions> 
         </dependency>
         
@@ -451,10 +456,25 @@
                 <exclusion>
                     <groupId>com.fasterxml.jackson.core</groupId>
                     <artifactId>*</artifactId>
-                </exclusion>  
+                </exclusion> 
+                <exclusion>  <!-- Use the more modern guava version included by gcs-connector -->
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
-              
+     
+         <dependency>
+            <groupId>com.google.cloud.bigdataoss</groupId>
+            <artifactId>gcs-connector</artifactId>
+            <version>${gcs.version}</version>   
+            <exclusions>
+                <exclusion> <!-- As log4j has jmx as transitive dependency an this raise a linkage error in VDP with MBeanServer class -->
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>       
+       </dependency>              
                         
         <dependency> 
             <groupId>org.apache.httpcomponents</groupId>
