@@ -3,6 +3,7 @@ CURRENT
 -------
 - #40114 - Update manual mentioning the need to increase the JVM's heap space for Admin Tool
 - #40062 - Include a class similar to the file system wrapper to list files in a bucket
+- #40061 - Include support for Google Storage
 
 20181024
 --------
